--- a/html5tree/index.html
+++ b/html5tree/index.html
@@ -45,7 +45,7 @@
                                     </tr>
                                     <tr>
                                         <td></td>
-                                        <td><input type="button" class="button" value="save"/><input type="button" class="button" value="cut"/></td>
+                                        <td><input type="button" class="button" value="save"/><input type="button" class="button" value="cut" onclick="controller.cut()"/></td>
                                     </tr>
 
                                 </table>
@@ -74,7 +74,7 @@
                                     </tr>
                                     <tr>
                                         <td></td>
-                                        <td><input type="button" class="button" value="save"/><input type="button" class="button" value="cut"/></td>
+                                        <td><input type="button" class="button" value="save"/><input type="button" class="button" value="cut" onclick="controller.cut()"/></td>
                                     </tr>
 
                                 </table>
@@ -95,7 +95,7 @@
                                     </tr>
                                     <tr>
                                         <td>Salary:</td>
-                                        <td><input type="text" name="total" class="text" readonly="readonly"/></td>
+                                        <td><input type="text" name="total" class="text"/></td>
                                     </tr>
                                     <tr>
                                         <td>Parent:</td>
@@ -103,7 +103,7 @@
                                     </tr>
                                     <tr>
                                         <td></td>
-                                        <td><input type="button" class="button" value="save"/><input type="button" class="button" value="cut"/></td>
+                                        <td><input type="button" class="button" value="save"/><input type="button" class="button" value="cut" onclick="controller.cut()"/></td>
                                     </tr>
 
                                 </table>
