--- a/html5tree/index.html
+++ b/html5tree/index.html
@@ -45,7 +45,7 @@
                                     </tr>
                                     <tr>
                                         <td></td>
-                                        <td><input type="button" class="button" value="save"/><input type="button" class="button" value="cut" onclick="controller.cut()"/></td>
+                                        <td><input type="button" class="button" value="save" onclick="controller.saveEntity()"/><input type="button" class="button" value="cut" onclick="controller.cut()"/></td>
                                     </tr>
 
                                 </table>
@@ -66,15 +66,15 @@
                                     </tr>
                                     <tr>
                                         <td>Manager:</td>
-                                        <td><select name="departmentManager" size="1" STYLE="width:100%;"></select></td>
+                                        <td><select name="manager" id="managerList" size="1" STYLE="width:100%;"></select></td>
                                     </tr>
                                     <tr>
                                         <td>Parent:</td>
-                                        <td><select name="departmentParents" size="1" STYLE="width:100%;"></select></td>
+                                        <td><select name="parent" id="depParentList" size="1" STYLE="width:100%;"></select></td>
                                     </tr>
                                     <tr>
                                         <td></td>
-                                        <td><input type="button" class="button" value="save"/><input type="button" class="button" value="cut" onclick="controller.cut()"/></td>
+                                        <td><input type="button" class="button" value="save" onclick="controller.saveEntity()"/><input type="button" class="button" value="cut" onclick="controller.cut()"/></td>
                                     </tr>
 
                                 </table>
@@ -103,7 +103,7 @@
                                     </tr>
                                     <tr>
                                         <td></td>
-                                        <td><input type="button" class="button" value="save"/><input type="button" class="button" value="cut" onclick="controller.cut()"/></td>
+                                        <td><input type="button" class="button" value="save" onclick="controller.saveEntity()"/><input type="button" class="button" value="cut" onclick="controller.cut()"/></td>
                                     </tr>
 
                                 </table>
@@ -120,7 +120,7 @@
         </table>
         
         <script type="text/javascript">
-            controller.loadTree(1);
+            controller.loadTree();
         </script>
     </body>
 </html>
