html5tree employee edit
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1871 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5tree/index.html
+++ b/html5tree/index.html
@@ -95,11 +95,11 @@
                                     </tr>
                                     <tr>
                                         <td>Salary:</td>
-                                        <td><input type="text" name="total" class="text"/></td>
+                                        <td><input type="text" name="total" class="text" onkeypress="employeeView.validate(event)"/></td>
                                     </tr>
                                     <tr>
                                         <td>Parent:</td>
-                                        <td><select name="employeeParents" size="1" STYLE="width:100%;"></select></td>
+                                        <td><select name="parent" id="empParentList" size="1" STYLE="width:100%;"></select></td>
                                     </tr>
                                     <tr>
                                         <td></td>
