html5tree failure messages
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1875 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5tree/index.html
+++ b/html5tree/index.html
@@ -36,8 +36,8 @@
                                 <table>
 
                                     <tr>
-                                        <td class="label"><div id="companyNameLabel">Name:</div></td>
-                                        <td><input type="text" class="text" name="name"/><div id="namefailureComp"></div></td>                      
+                                        <td class="label"><div id="compNameFailure">Name:</div></td>
+                                        <td><input type="text" class="text" name="name"/><div id="compNameFailureMessage"></div></td>                      
                                     </tr>
                                     <tr>
                                         <td>Total:</td>
@@ -57,8 +57,8 @@
                                 <table>
 
                                     <tr>
-                                        <td class="label"><div id="departmentLabelName">Name:</div></td>
-                                        <td><input type="text" class="text" name="name"/><div id="namefailureDep"></div></td>                      
+                                        <td class="label"><div id="depNameFailure">Name:</div></td>
+                                        <td><input type="text" class="text" name="name"/><div id="depNameFailureMessage"></div></td>                      
                                     </tr>
                                     <tr>
                                         <td>Total:</td>
@@ -86,16 +86,16 @@
                                 <table>
 
                                     <tr>
-                                        <td class="label"><div id="employeeLabelName">Name:</div></td>
-                                        <td><input type="text" class="text" name="name"/><div id="namefailureEmp"></div></td>                      
+                                        <td class="label"><div id="empNameFailure">Name:</div></td>
+                                        <td><input type="text" class="text" name="name"/><div id="empNameFailureMessage"></div></td>                      
                                     </tr>
                                     <tr>
-                                        <td>Address:</td>
-                                        <td><input type="text" class="text" name="address"/><div id="addressfailure"></div></td>
+                                        <td><div id="addressFailure">Address:</div></td>
+                                        <td><input type="text" class="text" name="address"/><div id="addressFailureMessage"></div></td>
                                     </tr>
                                     <tr>
-                                        <td>Salary:</td>
-                                        <td><input type="text" name="total" class="text" onkeypress="employeeView.validate(event)"/></td>
+                                        <td><div id="salaryFailure">Salary:</div></td>
+                                        <td><input type="text" name="total" class="text" onkeypress="employeeView.validate(event)"/><div id="salaryFailureMessage"></div></td>
                                     </tr>
                                     <tr>
                                         <td>Parent:</td>
