html5tree delete button
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1884 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5tree/index.html
+++ b/html5tree/index.html
@@ -82,8 +82,8 @@
                                         <td></td>
                                         <td>
                                             <input type="button" class="button" value="save" onclick="controller.saveEntity()"/>
-                                            <input type="button" class="button" value="cut" onclick="controller.cut()"/>
-                                            <input type="button" class="button" value="delete"/>
+                                            <input type="button" class="button" id="cutDepartment" value="cut" onclick="controller.cut()"/>
+                                            <input type="button" class="button" id="deleteDepartment" value="delete" onclick="controller.del()"/>
                                         </td>
                                     </tr>
 
@@ -115,8 +115,8 @@
                                         <td></td>
                                         <td>
                                             <input type="button" class="button" value="save" onclick="controller.saveEntity()"/>
-                                            <input type="button" class="button" value="cut" onclick="controller.cut()"/>
-                                            <input type="button" class="button" value="delete"/>
+                                            <input type="button" class="button" id="cutEmployee" value="cut" onclick="controller.cut()"/>
+                                            <input type="button" class="button" id="deleteEmployee" value="delete" onclick="controller.del()"/>
                                         </td>
                                     </tr>
 
