--- a/jsf/jsf/web/department.xhtml
+++ b/jsf/jsf/web/department.xhtml
@@ -48,6 +48,13 @@
                     </table>
                 </h:form>
             </ui:define>
+            
+            <ui:define name="bottom">
+                <h:form>
+                    <h:commandButton id="save" value="save" action="save"/>
+                    <h:commandButton id="back" value="back" action="back"/>
+                </h:form>
+            </ui:define>
 
         </ui:composition>
 
