--- a/jsf/jsf/web/template.xhtml
+++ b/jsf/jsf/web/template.xhtml
@@ -23,6 +23,10 @@
             <ui:insert name="content">Content</ui:insert>
         </div>
 
+        <div id="bottom" class="bottom">
+            <ui:insert name="bottom">Buttons</ui:insert>
+        </div>
+        
     </h:body>
 
 </html>
