--- a/jsf/jsf/web/company.xhtml
+++ b/jsf/jsf/web/company.xhtml
@@ -18,22 +18,25 @@
                     <table>
                         <tr>
                             <td>Name:</td>
-                            <td><h:inputText maxlength="100" value="#{companyController.name}"/></td>
+                            <td><h:inputText maxlength="100" value="#{companyBean.name}"/></td>
                         </tr>
                         <tr>
                             <td>Departments:<br/><br/><br/><br/><br/><br/><br/></td>
                             <td>
-                                <h:selectOneListbox size ="5" id="departments">
-                                    <f:selectItems value="#{companyController.departments}"/>
+                                <h:selectOneListbox size ="5" id="departments" value="#{companyBean.department}">
+                                    <f:selectItems value="#{companyBean.departments}"/>
                                 </h:selectOneListbox><br/>
-                                <h:commandButton id="selectDepartment" value="select" action="selectDepartment"/>
+                                <h:commandButton id="selectDepartment" value="select" action="department?faces-redirect=true&amp;includeViewParams=true" disabled="#{companyBean.departmentSelected}">
+                                    <f:param name="test" value="#{companyBean.department}"/>
+                                </h:commandButton>
+                                
                             </td>
                         </tr>
                         <tr>
                             <td>Total:</td>
                             <td>
-                                <h:inputText maxlength="100" disabled="true" value="#{companyController.total}"/><br/>
-                                <h:commandButton id="cut" value="cut"/>
+                                <h:inputText maxlength="100" disabled="true" value="#{companyBean.total}"/><br/>
+                                <h:commandButton id="cut" value="cut" action="#{companyBean.cut}"/>
                             </td>
                         </tr>
                     </table>
@@ -42,7 +45,7 @@
             
             <ui:define name="bottom">
                 <h:form>
-                    <h:commandButton id="save" value="save" action="#{companyController.save}"/>
+                    <h:commandButton id="save" value="save" action="#{companyBean.save}"/>
                 </h:form>
             </ui:define>
 
