--- a/jsf/jsf/web/employee.xhtml
+++ b/jsf/jsf/web/employee.xhtml
@@ -21,7 +21,10 @@
                     <table>
                         <tr>
                             <td>Name:</td>
-                            <td><h:inputText maxlength="100" value="#{employeeBean.name}"/></td>
+                            <td>
+                                <h:inputText maxlength="100" value="#{employeeBean.name}"/><br/>
+                                <h:commandButton id="save" value="save" action="save"/>
+                            </td>
                         </tr>
                         <tr>
                             <td>Address:</td>
@@ -35,12 +38,6 @@
                             </td>
                         </tr>
                     </table>
-                </h:form>
-            </ui:define>
-            
-            <ui:define name="bottom">
-                <h:form>
-                    <h:commandButton id="save" value="save" action="save"/>
                 </h:form>
             </ui:define>
 
