--- a/jsf/jsf/web/department.xhtml
+++ b/jsf/jsf/web/department.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <f:metadata>
-        <f:viewParam name="id" value="#{companyController.currentDepartment}"/>
+        <f:viewParam name="id" value="#{navigationBean.currentDepartment}"/>
     </f:metadata>
     <body>
 
@@ -32,7 +32,7 @@
                                 <h:selectOneListbox size ="5" id="departments" value="#{departmentBean.department}">
                                     <f:selectItems value="#{departmentBean.departments}"/>
                                 </h:selectOneListbox><br/>
-                                <h:commandButton id="selectDepartment" value="select" action="#{departmentBean.selectDepartment}" disabled="#{departmentBean.departmentSelectDisabled}"/>
+                                <h:commandButton id="selectDepartment" value="select" action="#{departmentBean.selectDepartment()}"/>
                             </td>
                         </tr>
                         <tr>
@@ -41,14 +41,14 @@
                                 <h:selectOneListbox size ="5" id="employees" value="#{departmentBean.employee}">
                                     <f:selectItems value="#{departmentBean.employees}"/>
                                 </h:selectOneListbox><br/>
-                                <h:commandButton id="selectEmployee" value="select" action="#{departmentBean.selectEmployee}"/>
+                                <h:commandButton id="selectEmployee" value="select" action="#{departmentBean.selectEmployee()}"/>
                             </td>
                         </tr>
                         <tr>
                             <td>Total:</td>
                             <td>
-                                <h:inputText maxlength="100" disabled="true" value="#{departmentBean.total}"/><br/>
-                                <h:commandButton id="cut" value="cut"  action="#{departmentBean.cut}"/>
+                                <h:inputText maxlength="100" disabled="true"/><br/>
+                                <h:commandButton id="cut" value="cut"/>
                             </td>
                         </tr>
                     </table>
