jsf + hibernate refactoring
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2227 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/jsf/web/employee.xhtml
+++ b/jsf/jsf/web/employee.xhtml
@@ -38,8 +38,8 @@
                         <tr>
                             <td></td>
                             <td>
-                                <h:commandButton id="save" value="save" action="save"/><br/>
-                                <h:commandButton id="cut" value="cut"/>
+                                <h:commandButton id="save" value="save" action="#{employeeBean.save()}"/><br/>
+                                <h:commandButton id="cut" value="cut" action="#{employeeBean.cut()}"/>
                             </td>
                         </tr>
                     </table>
