--- a/jsf/jsf/web/company.xhtml
+++ b/jsf/jsf/web/company.xhtml
@@ -6,8 +6,8 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <body>
-
-        <ui:composition template="./template.xhtml">
+        
+        <ui:composition template="./companiesTemplate.xhtml">
 
             <ui:define name="top">
                 <h2>Company View</h2>
@@ -15,31 +15,30 @@
 
             <ui:define name="content">
                 <h:form>
-                    <table>
-                        <tr>
-                            <td>Name:</td>
-                            <td>
-                                <h:inputText maxlength="100" value="#{companyBean.name}"/><br/>
-                                <h:commandButton id="save" value="save" action="#{companyBean.save()}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Departments:<br/><br/><br/><br/><br/><br/><br/></td>
-                            <td>
-                                <h:selectOneListbox size ="5" id="departments" value="#{companyBean.department}">
-                                    <f:selectItems value="#{companyBean.departments}"/>
-                                </h:selectOneListbox><br/>
-                                <h:commandButton id="selectDepartment" value="select" action="#{companyBean.selectDepartment()}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Total:</td>
-                            <td>
-                                <h:inputText maxlength="100" disabled="true" value="#{companyBean.total()}"/><br/>
-                                <h:commandButton id="cut" value="cut" action="#{companyBean.cut()}"/>
-                            </td>
-                        </tr>
-                    </table>
+                    <h:panelGrid columns="3" columnClasses="label,content,button">
+                        <h:outputLabel for="name" value="Name:"/>
+                        <h:inputText label="Name" id="name" value="#{companyBean.name}" required="true" requiredMessage="Enter a valid name, please."/>
+                        <h:commandButton value="save" actionListener="#{companyBean.save()}"/>
+                    </h:panelGrid>
+                    <h:message for="name"/>
+                </h:form>
+                <h:form>
+                    <h:panelGrid columns="3" columnClasses="label,content,button">
+                        <h:outputLabel for="depSelection" value="Departments:"/>
+                        <h:selectOneListbox required="true" label="Department selection" id="depSelection" size="5" value="#{companyBean.selectedDepartment}">
+                            <f:selectItems value="#{companyBean.departments}"/>
+                        </h:selectOneListbox>
+                        <h:commandButton value="select" actionListener="#{companyBean.navigateToDepartment()}" action="select"/>
+                    </h:panelGrid>
+                    <h:message for="depSelection"/>
+                </h:form> 
+                <h:form>
+                    <h:panelGrid columns="3" columnClasses="label,content,button">        
+                        <h:outputLabel for="total" value="Total:"/>
+                        <h:outputText id="total" value="#{companyBean.total}"/>
+                        <h:commandButton value="cut" actionListener="#{companyBean.cut()}"/>
+                    </h:panelGrid>
+                    <h:message for="total"/>
                 </h:form>
             </ui:define>
 
