--- a/jsf/jsf/web/department.xhtml
+++ b/jsf/jsf/web/department.xhtml
@@ -5,12 +5,9 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
-    <f:metadata>
-        <f:viewParam name="id" value="#{navigationBean.currentDepartment}"/>
-    </f:metadata>
     <body>
 
-        <ui:composition template="./template.xhtml">
+        <ui:composition template="./companiesTemplate.xhtml">
 
             <ui:define name="top">
                 <h2>Department View</h2>
@@ -18,40 +15,40 @@
 
             <ui:define name="content">
                 <h:form>
-                    <table>
-                        <tr>
-                            <td>Name:</td>
-                            <td>
-                                <h:inputText maxlength="100" value="#{departmentBean.name}"/><br/>
-                                <h:commandButton id="save" value="save" action="#{departmentBean.save()}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Departments:<br/><br/><br/><br/><br/><br/><br/></td>
-                            <td>
-                                <h:selectOneListbox size ="5" id="departments" value="#{departmentBean.department}">
-                                    <f:selectItems value="#{departmentBean.departments}"/>
-                                </h:selectOneListbox><br/>
-                                <h:commandButton id="selectDepartment" value="select" action="#{departmentBean.selectDepartment()}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Employees:</td>
-                            <td>
-                                <h:selectOneListbox size ="5" id="employees" value="#{departmentBean.employee}">
-                                    <f:selectItems value="#{departmentBean.employees}"/>
-                                </h:selectOneListbox><br/>
-                                <h:commandButton id="selectEmployee" value="select" action="#{departmentBean.selectEmployee()}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Total:</td>
-                            <td>
-                                <h:inputText maxlength="100" disabled="true" value="#{departmentBean.total()}"/><br/>
-                                <h:commandButton id="cut" value="cut" action="#{departmentBean.cut()}"/>
-                            </td>
-                        </tr>
-                    </table>
+                    <h:panelGrid columns="3" columnClasses="label,content,button">
+                        <h:outputLabel for="name" value="Name:"/>
+                        <h:inputText label="Name" id="name" value="#{companyBean.name}" required="true" requiredMessage="Enter a valid name, please."/>
+                        <h:commandButton value="save" actionListener="#{companyBean.save()}"/>
+                    </h:panelGrid>
+                    <h:message for="name"/>
+                </h:form>
+                <h:form>
+                    <h:panelGrid columns="3" columnClasses="label,content,button">
+                        <h:outputLabel for="depSelection" value="Departments:"/>
+                        <h:selectOneListbox required="true" label="Department selection" id="depSelection" size="5" value="#{companyBean.selectedDepartment}">
+                            <f:selectItems value="#{companyBean.departments}"/>
+                        </h:selectOneListbox>
+                        <h:commandButton value="select" actionListener="#{companyBean.navigateToDepartment()}" action="selectDepartment"/>
+                    </h:panelGrid>
+                    <h:message for="depSelection"/>
+                </h:form>
+                <h:form>
+                    <h:panelGrid columns="3" columnClasses="label,content,button">
+                        <h:outputLabel for="empSelection" value="Employees:"/>
+                        <h:selectOneListbox required="true" label="Employee selection" id="empSelection" size="5" value="#{companyBean.selectedEmployee}">
+                            <f:selectItems value="#{companyBean.employees}"/>
+                        </h:selectOneListbox>
+                        <h:commandButton value="select" actionListener="#{companyBean.navigateToEmployee()}" action="selectEmployee"/>
+                    </h:panelGrid>
+                    <h:message for="empSelection"/>
+                </h:form> 
+                <h:form>
+                    <h:panelGrid columns="3" columnClasses="label,content,button">        
+                        <h:outputLabel for="total" value="Total:"/>
+                        <h:outputText id="total" value="#{companyBean.total}"/>
+                        <h:commandButton value="cut" actionListener="#{companyBean.cut()}"/>
+                    </h:panelGrid>
+                    <h:message for="total"/>
                 </h:form>
             </ui:define>
 
