git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2240 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/jsf/web/department.xhtml
+++ b/jsf/jsf/web/department.xhtml
@@ -23,6 +23,14 @@
                     <h:message for="name"/>
                 </h:form>
                 <h:form>
+                    <h:panelGrid columns="3" columnClasses="label,content,button">        
+                        <h:outputLabel for="manager" value="Manager:"/>
+                        <h:outputText id="manager" value="#{companyBean.manager}"/>
+                        <h:commandButton value="edit" actionListener="#{companyBean.navigateToManager()}" action="selectEmployee"/>
+                    </h:panelGrid>
+                    <h:message for="total"/>
+                </h:form>
+                <h:form>
                     <h:panelGrid columns="3" columnClasses="label,content,button">
                         <h:outputLabel for="depSelection" value="Departments:"/>
                         <h:selectOneListbox required="true" label="Department selection" id="depSelection" size="5" value="#{companyBean.selectedDepartment}">
