jsf hibernate refactoring
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2241 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/jsf/web/employee.xhtml
+++ b/jsf/jsf/web/employee.xhtml
@@ -28,8 +28,8 @@
                     <h:message for="address"/>
                 
                     <h:panelGrid columns="2" columnClasses="label,content">        
-                        <h:outputLabel for="total" value="Total:"/>
-                        <h:outputText id="total" value="#{companyBean.total}"/>
+                        <h:outputLabel for="total" value="Salary:"/>
+                        <h:inputText label="Total" id="total" value="#{companyBean.total}" required="true" requiredMessage="Enter a valid Salary, please."/>
                     </h:panelGrid>
                     <h:message for="total"/>
                     
